@@ -1195,7 +1195,7 @@ f_rcpt( struct receive_data *r )
 
 		if ( r->r_rbl_status == RBL_UNKNOWN ) {
 		    r->r_rbl_status = rbl_check( simta_user_rbls,
-			    &(r->r_sin->sin_addr), r->r_remote_hostname,
+			    &(r->r_sin->sin_addr), NULL, r->r_remote_hostname,
 			    &(r->r_rbl), &(r->r_rbl_msg));
 		}
 
@@ -2662,7 +2662,7 @@ smtp_receive( int fd, struct connection_info *c, struct simta_socket *ss )
 
         if ( simta_rbls != NULL ) {
             switch( rbl_check( simta_rbls, &(c->c_sin.sin_addr),
-		    r.r_remote_hostname, &(r.r_rbl), &(r.r_rbl_msg))) {
+		    r.r_remote_hostname, NULL, &(r.r_rbl), &(r.r_rbl_msg))) {
             case RBL_BLOCK:
 		r.r_rbl_status = RBL_BLOCK;
                 syslog( LOG_INFO, "Connect.in [%s] %s: RBL Blocked %s: %s",
